--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.google.code.androidrome.demo">
-  <application android:icon="@drawable/icon" android:label="rome-on-android-demo">
+  <application android:icon="@drawable/icon" android:label="@string/app_name">
     <activity android:name=".MyActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
